# nbx-tools

./: README.md
nbx-api/: Cargo.toml
nbx-api/src/: client.rs  config.rs  error.rs  lib.rs  websocket.rs
nbx-api/src/client/: accounts.rs  markets.rs
nbx-tui/: Cargo.toml  config.toml.example
nbx-tui/src/: main.rs
