[package]
name = "nbx-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
futures = "0.3.26"
hmac = { version = "0.12.1", features = ["std"] }
reqwest = { version = "0.11.14", features = ["serde_json", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
tokio = "1.25.0"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
