[package]
name = "nbx-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
crossterm = "0.26.0"
nbx-api = { version = "0.1.0", path = "../nbx-api" }
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["serde_json", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
toml = "0.7.2"
tui = "0.19.0"
